--- a/CompleteManualActivity/pom.xml
+++ b/CompleteManualActivity/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.amazonaws.lambda</groupId>
+  <groupId>com.amazonaws.swf</groupId>
   <artifactId>CompleteActivity</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
@@ -31,12 +31,17 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <artifactSet>
+			 <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.amazonaws.swf.demo.CompleteManualActivity</mainClass>
+                </transformer>
+              </transformers>
+              <!--<artifactSet>
                 <excludes>
                   <exclude>com.amazonaws:aws-lambda-java-events</exclude>
                   <exclude>com.amazonaws:aws-lambda-java-core</exclude>
                 </excludes>
-              </artifactSet>
+              </artifactSet>-->
             </configuration>
           </execution>
         </executions>
