--- a/TestWorkFlow/pom.xml
+++ b/TestWorkFlow/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.amazonaws.lambda</groupId>
+  <groupId>com.amazonaws.swf</groupId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
 
@@ -30,12 +30,17 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <artifactSet>
+			 <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.amazonaws.swf.demo.StartWorkFlow</mainClass>
+                </transformer>
+              </transformers>
+              <!--<artifactSet>
                 <excludes>
                   <exclude>com.amazonaws:aws-lambda-java-events</exclude>
                   <exclude>com.amazonaws:aws-lambda-java-core</exclude>
                 </excludes>
-              </artifactSet>
+              </artifactSet>-->
             </configuration>
           </execution>
         </executions>
@@ -73,7 +78,7 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
       <version>1.3.0</version>
@@ -82,7 +87,7 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.1.0</version>
-    </dependency>
+    </dependency>-->
     <dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-swf-build-tools</artifactId>
